--- a/css/register.css
+++ b/css/register.css
@@ -7,7 +7,7 @@
 #link-login {
     font-size: 13px;
     font-style: italic;
-    color: #00ae1c;
+    color: #84C93B;
     cursor: pointer;
     text-decoration: underline;
 }
